src/scss/components/_shelf.scss
.shelf,
.diff {
  &__carousel--full {
    .prateleira>ul {
      display: block;
      padding: 10px;
    }
  }

  ul {
    display: flex;
    width: 100%;
    justify-content: flex-start;
    flex-wrap: wrap;

    &.slick-initialized {
      display: block;
    }

    &.slick-dots {
      justify-content: center;

      li {
        margin: 5px;
        padding: 0;
        max-width: 15px;

        &.slick-active button {
          background-color: $c-primary;
        }

      }

      button {
        background-color: #BCBCBC;
        border: none;
        font-size: 0;
        width: 15px;
        height: 15px;
        border-radius: 50%;


      }
    }

    &.slick-slider {
      padding: 0 5px;
    }
  }

  li {
    margin: 0 5px;
    max-width: 150px;

    &.slick-slide {
      margin: 0;
    }

  }

  &__carousel--category {
    width: 100%;
    padding: 15px 0;
  }

  .prateleira {
    &>h2 {
      display: none;
    }
  }

  &__button {
    border: none;
    background-color: transparent;

    .shelf__carousel--full & {
      height: 60px;
      top: 50%;
      margin-top: -30px;
      position: absolute;
      z-index: 10;
      outline: none;

      svg {
        width: 30px;
      }

      &.slick-prev {
        left: -30px;
      }

      &.slick-next {
        right: -30px;
      }

    }

    .shelf__brand & {
      svg {
        width: 30px;
      }
    }
  }

  &__brand {
    .box-banner {

      margin: 5px;
    }

    a {
      display: block;
      width: 100%;
      text-align: center;
    }

    img {
      margin: 0 auto;
    }
  }

  &--flip {
    ul {
      flex-wrap: wrap;
      justify-content: space-between;
    }

    li {
      max-width: 350px;
      margin: 20px auto;
    }
  }


}

.shelf .slick-track {
  padding: 20px;
}

.buy-by-category {
  display: flex;
  align-items: stretch;
  justify-content: space-between;
  flex-wrap: wrap;
  padding-top: 15px;

  &+.buy-by-category {
    margin-top: 20px;
    border-top: 1px solid #ccc;
  }

  .slick-arrow {
    width: 30px;
    height: 30px;
    border-radius: 50%;
    background-color: $c-white;
    border: none;
    box-shadow: 0px 1px 10px 1px #cccccc;
    padding: 8px 5px;
  }

  .category__card {
    width: 100%;

    background-color: #eeeeee;
    position: relative;
    margin-top: 50px;

    &-header {}

    &-media {
      border-radius: 100%;
      overflow: hidden;
      width: 100px;
      height: 100px;
      margin: auto;
      position: absolute;
      top: -40px;
      left: 50%;
      margin-left: -50px;
    }

    &-info {
      width: 100%;
      padding: 50px 10px 10px;
      display: flex;
      align-items: center;
      justify-content: center;
      margin: 20px 0 10px;
      flex-wrap: wrap;
    }
  }

  .category__menu {
    background-color: #eeeeee;
    text-align: center;

    li {
      margin: 10px 5px;
    }

    a {
      border: 1px solid $c-primary;
      color: $c-primary;
      background-color: $c-white;
      border-radius: 10px;
      white-space: nowrap;
      font-size: 14px;

      &:hover {
        background-color: $c-primary;
        text-decoration: none;
        color: $c-white;
      }
    }

    .menu-list {
      display: flex;
      overflow-x: scroll;
      padding: 15px 10px;
      border-top: 1px solid #ccc;
      border-bottom: 1px solid #ccc;
    }
  }

  .category__name {
    display: block;
    color: $c-primary;
    font-weight: 700;
    font-size: 18px;
    text-transform: uppercase;
    width: 100%;
    text-align: center;
  }

  .category__link {
    color: #bebebe;
    height: 25px;
    font-size: 16px;

    i {

      color: $c-primary;
      margin-left: 5px;
    }
  }

  .slick-arrow svg {
    width: 8px;
  }

  .shelf .slick-slider {
    display: block;
  }

  .shelf .slick-arrow {
    position: absolute;
    z-index: 20;
    top: 50%;
    margin-top: -15px;
  }

  .shelf .slick-next {
    right: 0;
  }

  .menu-list .slick-prev {
    transform: rotate(90deg);
  }

  .menu-list .slick-next {
    transform: rotate(90deg);
  }


}


.thumbs {
  .slick-dots {
    justify-content: center;
    display: flex;

    li {
      margin: 5px;
      padding: 0;
      max-width: 15px;

      &.slick-active button {
        background-color: $c-primary;
      }

    }

    button {
      background-color: #BCBCBC;
      border: none;
      font-size: 0;
      width: 15px;
      height: 15px;
      border-radius: 50%;


    }
  }
}


.shelf__carousel--full,
.buy-by-category {
  .owl-dots {
    display: flex;
    justify-content: center;
    margin: 10px;

    button.owl-dot {
      background-color: #BCBCBC;
      border: none;
      font-size: 0;
      width: 15px;
      height: 15px;
      border-radius: 50%;
      margin: 0 3px;

      &.active {
        background-color: $c-primary;
      }

    }
  }
}


.ellip {
  display: block;
  height: 100%;
}

.ellip-line {
  display: inline-block;
  text-overflow: ellipsis;
  white-space: nowrap;
  word-wrap: normal;
}

.ellip,
.ellip-line {
  position: relative;
  overflow: hidden;
  max-width: 100%;
}


.flag {
  &.leve-mais-pague-menos {
    position: absolute;
    top: -1px;
    right: -1px;
    width: 30%;
    height: 100%;
    font-size: 0;
    display: block;
    background-image: url('/arquivos/leve-mais-pague-menos.png');
    background-repeat: no-repeat;
    background-size: contain;
  }

  &.black-friday {
    background: #000;
    color: #fff;
    text-align: center;
    position: absolute;
    bottom: 0;
    width: 100%;
    left: 0;
    right: 0;
  }
}

.shelf--loading {
  .prateleira {
    opacity: 0;
  }
}

